--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body {
-    background-color:#AAFFFF;  
+  background-color: #aaffff;
+}
+.fake {
+  background-color: rgb(80, 8, 248);
+  height: 200px;
+}
+
+.container {
+  background-color: rgb(0, 217, 255);
+  height: 1000px;
+}
+
+img {
+  position: relative;
+  top: 50px;
+  left: 100px;
 }
