--- a/style.css
+++ b/style.css
@@ -3,23 +3,36 @@
 }
 .fake {
   background-color: rgb(80, 8, 248);
-  height: 200px;
+  height: 500px;
 }
 
 .container {
-  background-color: rgb(0, 217, 255);
-  width: 500px;
-  margin: 0 auto;
+  background-color: black;
+  width: 1000px;
+  margin-top: auto;
   padding: 10px;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: flex-end;
 }
-.item {
-  background-color: cornsilk;
-  color: dodgerblue;
+.item1 {
+  background-color: black;
+  color: rgb(255, 255, 255);
+  width: 100px;
+  font-size: 36px;
+  text-align: center;
+  margin: 10px;
+}
+.item2 {
+  background-color: black;
+  color: rgb(255, 255, 255);
+  width: 100px;
+  font-size: 36px;
+  text-align: center;
+  margin: 10px;
+}
+.item3 {
+  background-color: black;
+  color: rgb(255, 255, 255);
   width: 100px;
   font-size: 36px;
   text-align: center;
